# diffstat

./: README.md  pyproject.toml
src/diffstat/: __init__.py  core.py  formatter.py  models.py
tests/: __init__.py  test_file.py  test_format.py  test_parse.py
tests/tests/: test_edge_cases.py
